--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,8 +7,6 @@
 
 import BaseLayout from '@/layouts/BaseLayout.astro';
 
-const BASE_URL = import.meta.env.BASE_URL;
-
 ---
 
 <BaseLayout title="About - Auguslabs">
@@ -150,7 +148,7 @@ const BASE_URL = import.meta.env.BASE_URL;
             Want to know more about who we are?
           </p>
           <a 
-            href={`${BASE_URL}makers`}
+            href="/makers"
             class="inline-block px-8 py-4 text-white font-semibold rounded-lg hover:opacity-90 transition-opacity shadow-lg"
             style="background-color: #9b4f07;"
           >
